# scoreboard-clock-controller

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  WIRING.md
include/: button_driver.h  espnow_watch_rx.h  espnow_watches.h  input_handler.h  lcd_i2c.h  radio_comm.h  rotary_encoder.h  sport_manager.h  sport_selector.h  st7735_lcd.h  timer_manager.h  ui_manager.h
main/: CMakeLists.txt  button_driver.c  colors.c  espnow_watch_rx.c  font8x8.c  i2c_scanner.c  input_handler.c  lcd_i2c.c  main.c  radio_comm.c  rotary_encoder.c  sport_manager.c  sport_selector.c  st7735_lcd.c  timer_manager.c  ui_manager.c
main/ui/: ui_helpers.c  ui_helpers.h  ui_lcd_i2c_main.c  ui_lcd_i2c_main.h  ui_lcd_i2c_menus.c  ui_lcd_i2c_menus.h  ui_st7735_main.c  ui_st7735_main.h  ui_st7735_menus.c  ui_st7735_menus.h  ui_st7735_variant_bar.c  ui_st7735_variant_bar.h
